Enhance elevate section styling

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -22,6 +22,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
+  <style>
+    :root {
+      --brand-orange: #ff5a0a;
+      --brand-blue: #3c52ff;
+    }
+  </style>
   {% block tracking_scripts %}
     {% include "partials/tracking.html" %}
   {% endblock %}
