--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -38,6 +38,7 @@
         <ul class="space-y-2">
           <li><a href="/why-l3/" class="footerLink">Why L3?</a></li>
           <li><a href="/about-us/" class="footerLink">About Us</a></li>
+          <li><a href="/careers/" class="footerLink">Careers</a></li>
           <li><a href="/partners/" class="footerLink">Partners</a></li>
           <li><a href="/resources/" class="footerLink">Resources</a></li>
           <li><a href="https://support.l3networks.com/" class="footerLink">Support</a></li>
