Stagger fade-in for industry cards

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -978,42 +978,42 @@
         }
       </style>
       <div class="industryGrid">
-        <div class="industryCard">
+        <div class="industryCard fade-item delay-0">
           <img src="/images/home/Manufacturing.png" alt="Manufacturing" class="industryImg" loading="lazy" decoding="async"/>
           <div class="industryShade bg-gradient-to-t from-black/75 via-black/20 to-transparent"></div>
           <div class="industryLabel"><h3 class="text-white font-semibold text-lg md:text-xl">Manufacturing</h3></div>
         </div>
-        <div class="industryCard">
+        <div class="industryCard fade-item delay-100">
           <img src="/images/home/Entertainment.png" alt="Entertainment" class="industryImg" loading="lazy" decoding="async"/>
           <div class="industryShade bg-gradient-to-t from-black/75 via-black/20 to-transparent"></div>
           <div class="industryLabel"><h3 class="text-white font-semibold text-lg md:text-xl">Entertainment</h3></div>
         </div>
-        <div class="industryCard">
+        <div class="industryCard fade-item delay-200">
           <img src="/images/home/Logistics.png" alt="Logistics" class="industryImg" loading="lazy" decoding="async"/>
           <div class="industryShade bg-gradient-to-t from-black/75 via-black/20 to-transparent"></div>
           <div class="industryLabel"><h3 class="text-white font-semibold text-lg md:text-xl">Logistics</h3></div>
         </div>
-        <div class="industryCard">
+        <div class="industryCard fade-item delay-300">
           <img src="/images/home/Financial Services.png" alt="Financial Services" class="industryImg" loading="lazy" decoding="async"/>
           <div class="industryShade bg-gradient-to-t from-black/75 via-black/20 to-transparent"></div>
           <div class="industryLabel"><h3 class="text-white font-semibold text-lg md:text-xl">Financial Services</h3></div>
         </div>
-        <div class="industryCard">
+        <div class="industryCard fade-item delay-400">
           <img src="/images/home/B2B Services.png" alt="B2B Services" class="industryImg" loading="lazy" decoding="async"/>
           <div class="industryShade bg-gradient-to-t from-black/75 via-black/20 to-transparent"></div>
           <div class="industryLabel"><h3 class="text-white font-semibold text-lg md:text-xl">B2B Services</h3></div>
         </div>
-        <div class="industryCard">
+        <div class="industryCard fade-item delay-500">
           <img src="/images/home/designbuild.webp" alt="Design &amp; Construction" class="industryImg" loading="lazy" decoding="async"/>
           <div class="industryShade bg-gradient-to-t from-black/75 via-black/20 to-transparent"></div>
           <div class="industryLabel"><h3 class="text-white font-semibold text-lg md:text-xl">Design &amp; Construction</h3></div>
         </div>
-        <div class="industryCard">
+        <div class="industryCard fade-item delay-600">
           <img src="/images/home/Healthcare.png" alt="Healthcare" class="industryImg" loading="lazy" decoding="async"/>
           <div class="industryShade bg-gradient-to-t from-black/75 via-black/20 to-transparent"></div>
           <div class="industryLabel"><h3 class="text-white font-semibold text-lg md:text-xl">Healthcare</h3></div>
         </div>
-        <div class="industryCard">
+        <div class="industryCard fade-item delay-700">
           <img src="/images/home/Legal Services.png" alt="Legal Services" class="industryImg" loading="lazy" decoding="async"/>
           <div class="industryShade bg-gradient-to-t from-black/75 via-black/20 to-transparent"></div>
           <div class="industryLabel"><h3 class="text-white font-semibold text-lg md:text-xl">Legal Services</h3></div>
