--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -4,7 +4,7 @@
 <div class="home-page">
 <header class="relative z-0 flex items-center justify-center overflow-hidden text-white bg-black homeHero" style="height:80svh;">
   <!-- Content Container -->
-  <div class="container absolute z-30 max-w-screen-xl px-4 py-16 mx-auto fade-item delay-0">
+  <div class="container absolute z-30 max-w-screen-xl px-4 py-16 mx-auto">
     <div class="flex flex-col items-center w-full md:items-start">
       <div class="w-full p-3 text-center md:text-left">
         <h1 class="block mb-4 text-3xl font-semibold text-center md:hidden md:tracking-tighter font-mont" style="letter-spacing:-0.04em;">
